--- a/NikhilMatti_Portfolio/index.html
+++ b/NikhilMatti_Portfolio/index.html
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <h4><strong>I'm a Passionate Full Stack Developer But More Important I'm a Passionate about Technology
+          <h4><strong>I'm a Passionate Software Developer But More Important I'm a Passionate about Technology
             </strong></p>
         </div>
 
@@ -91,10 +91,10 @@
             <img src="assets/img/dp.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3> Full Stack Developer</h3>
+            <h3> Software Developer</h3>
             <p class="fst-italic">
-              A Quick Learner with good knowledge in C/C++,HTML, CSS,DBMS,PHP, and Python. Also Updating knowledge in
-              Java and JavaScript
+              A Quick Learner with good knowledge in Java, C/C++, JavaScript, ReactJS, HTML, CSS, DBMS, PHP, and Python. Also Updating knowledge in
+              Kotlin and Figma
             </p>
             <div class="row">
               <div class="col-lg-6">
